# dice-game-helper

./: CMakeLists.txt  main.cpp
firstWindow/: appearance.cpp  firstwindow.cpp  firstwindow.h
firstWindow/mainWindow/: mainwindow.cpp  mainwindow.h  object.cpp  object.h
